--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 			</div>
 			<div id="game"></div>
 		</div>
-		<script src="chart.js"></script>
-		<script src="game.js"></script>
-		<script src="index.js"></script>
+		<script src="src/chart.js"></script>
+		<script src="src/game.js"></script>
+		<script src="src/index.js"></script>
 	</body>
 </html>
 
